@@ -1,28 +1,3 @@
-apply plugin: 'java'
-apply plugin: 'idea'
-
-group = 'com.genius.primavera'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '12'
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
-
-repositories {
-    mavenCentral()
-}
-
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
-test {
-    jvmArgs(['--enable-preview'])
-}
-
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web') {
         exclude module: "spring-boot-starter-tomcat"
@@ -30,19 +5,20 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-jdbc')
     implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
     implementation('org.springframework.boot:spring-boot-devtools')
-    compile('org.springframework.security:spring-security-config:5.1.5.RELEASE')
-    compile('org.springframework.security:spring-security-web:5.1.5.RELEASE')
-    compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE')
-    compile('org.springframework.boot:spring-boot-starter-undertow')
-    compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.1")
-    compile("org.mybatis.dynamic-sql:mybatis-dynamic-sql:1.1.1")
-    compile('org.mariadb.jdbc:mariadb-java-client:2.4.1')
-    compile('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.3.0')
-    compile('com.navercorp.lucy:lucy-xss-servlet:2.0.0')
+    implementation('org.springframework.security:spring-security-config:5.1.5.RELEASE')
+    implementation('org.springframework.security:spring-security-web:5.1.5.RELEASE')
+    implementation('org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE')
+    implementation('org.springframework.boot:spring-boot-starter-undertow')
+    implementation("org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.1")
+    implementation("org.mybatis.dynamic-sql:mybatis-dynamic-sql:1.1.1")
+    implementation('org.mariadb.jdbc:mariadb-java-client:2.4.1')
+    implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.3.0')
+    implementation('commons-codec:commons-codec:1.15')
     compileOnly('org.projectlombok:lombok')
     annotationProcessor('org.projectlombok:lombok')
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude module: 'junit'
     }
     testImplementation('org.springframework.security:spring-security-test')
+    implementation project(':spring-boot-starter-lucy-filter')
 }
